# Archon

./: .env.backup  .gitignore  .gitignore.vectordb  .mcp.json  AGENT_INVESTIGATION_SUMMARY.md  APPLY_MIGRATIONS_NOW.sql  CLAUDE.md  COMPLETE_REFACTORING_SYSTEM.md  DECOMPOSE_AGENT_WITH_VALIDATION.md  Dockerfile.migrations  FILE_VS_DIRECTORY_UPDATE.md  MCP_CLAUDE_CODE_SETUP.md  MIGRATION_SUMMARY.md  Makefile  README.md  RECURSIVE_REFACTORING_README.md  REFACTORING_AGENTS_USAGE_GUIDE.md  REFACTORING_PLAN.md  SINGLE_FILE_VS_DIRECTORY.md  STATUS_BADGE_IMPLEMENTATION.md  TESTING_WORKFLOW_GAPS.md  VALIDATION_HOOKS_SYSTEM.md  VECTORDB_AGENTS_ARCHITECTURE.txt  ai_prompts.json  apply_mcp_migration.py  build_vectordb_pipeline.py  correct_stubs.py  correct_stubs_fixed.py  create_comment_map.py  create_tasks.py  create_vectordb_agents.py  current_folder.txt  docker-compose.vectordb.yml  docker-compose.yml  example_usage.py  extract_prompts.py  extract_signatures.py  fix_recrawl_bug.py  fix_repository_factory.py  fix_source_status.py  (+27 more)
.claude/: settings.json
PRPs/: MCP_ANALYTICS_CACHING_OPTIMIZATION.md  MCP_ANALYTICS_E2E_TESTING.md  MCP_ANALYTICS_IMPLEMENTATION_SUMMARY.md  MCP_ANALYTICS_PERFORMANCE_TESTING.md  MCP_ANALYTICS_PHASE_1_COMPLETE.md  MCP_ANALYTICS_UI_CHECKLIST.md  MCP_ANALYTICS_UI_ENHANCEMENTS.md  MCP_ANALYTICS_UI_MOCKUP.md  MCP_USAGE_ANALYTICS_IMPLEMENTATION_PLAN.md  MCP_USAGE_ANALYTICS_SPEC.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  SQLITE_NAMING_MIGRATION_SPEC.md
agents/: .env.example  DELIVERY.md  FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  implement_status_badge_phase1.py  implement_status_badge_phase2.py  implement_status_badge_phase3.py  implement_status_badge_phase4.py  run_all_phases.py
archon-ui-main/: .dockerignore  Dockerfile  Dockerfile.test  Dockerfile.test.allpass  Dockerfile.test.multistage  Makefile  README.md  README.testing.md  docker-compose.test.yml  package-lock.json  package.json  run-tests.sh  test-docker-patch.js  vite.config.ts  vitest-fast.config.ts  vitest.config.ts
database_refactoring_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: BACKEND_CHANGES.md  BUILD_PIPELINE_README.md  CRAWL_AND_STORE_QUICKSTART.md  CRAWL_AND_STORE_SERVICE_REPORT.md  DATABASE_MIGRATION_SETUP.md  DATABASE_REPOSITORY_REFACTORING.md  DATABASE_SETUP_REQUIRED.md  DOCKER_COMPOSE_IMPROVEMENT.md  FINAL_VERIFICATION_COMPLETE.md  FIX_TESTS_README.md  FLYWAY_MIGRATIONS.md  FRONTEND_CHANGES.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_TEST.md  INVESTIGATION_REPORT.md  MIGRATION_SUMMARY.md  QUICK_FIX_DATABASE.md  QUICK_START_VECTORDB_AGENTS.md  REMAINING_SUPABASE_REFERENCES.md  REPOSITORY_FACTORY_SUMMARY.md  REPOSITORY_MIGRATION_COMPLETE.md  REPOSITORY_PATTERN.md  REPOSITORY_PATTERN_FINAL_SUMMARY.md  SERVICES_MIGRATION_COMPLETE.md  SERVICES_WITH_SUPABASE_REFERENCES.md  SIMPLE_VECTORDB_INTEGRATION.md  SIMPLE_VECTORDB_QUICKSTART.md  SQLITE_71_METHODS.md  SQLITE_IMPLEMENTATION.md  START_HERE.md  TEST_FIXER_SUMMARY.md  TEST_FIX_ORCHESTRATOR_README.md  TEST_FIX_SUMMARY.md  TEST_ORCHESTRATOR_ARCHITECTURE.md  USE_SQLITE.md  VECTORDB_AGENTS_README.md  VECTORDB_AGENTS_SUMMARY.md  VECTORDB_SETUP.md  database-service-classes.md  repository-pattern-migration-checklist.md
experimental/: fastmcp_server.py
migration/: MIGRATION_INSTRUCTIONS.md  create_migration_function.sql  flyway.conf  remove_project_management.sql  run-migrations.sh  run_mcp_migration.py  test_mcp_schema.py
python/: .dockerignore  .env.test.example  AGENT_WORKFLOW.md  API_PATTERNS.md  BUILD_TIMEOUT_FIX.md  CRAWL_STATUS_BUG_REPORT.md  CREATION_CHECKLIST.md  DAL_MIGRATION_COMPLETE.md  DATABASE_INTEGRATION.md  DECOMPOSITION_REPORT.md  Dockerfile.agents  Dockerfile.mcp  Dockerfile.server  Dockerfile.test  EXAMPLES.md  FIX_UV_TIMEOUT.md  INTEGRATION_TEST_RESULTS.md  INVESTIGATION_README.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  Makefile  README.md  REFACTORING_FINAL_REPORT.md  REPOSITORY_PATTERN.md  RUNTIME_FIX_SUMMARY.md  TEST_INFRASTRUCTURE.md  VALIDATION_COMMANDS.md  coverage.json  docker-compose.dev.yml  docker-compose.test.yml  fix_pending_sources.py  investigate_crawl_status.py  pyproject.toml  pytest-baseline.ini  pytest-fast.ini  pytest.ini  requirements.server.txt  run-tests.sh  run_investigation.sh  (+11 more)
(+409 files in other folders)
